@@ -1,3 +1,9 @@
+2002-06-18  Kiyokazu SUTO <suto@ks-and-ks.ne.jp>
+
+	* [w3m-dev 03212] lstat() in form.c
+	* form.c: define lstat unless HAVE_LSTAT
+		(form_write_from_file): always check lstat()
+
 2002-06-17  Dai Sato <satodai@dog.intcul.tohoku.ac.jp>
 
 	* [w3m-dev 03214] strtoul() in frame.c
@@ -3498,4 +3504,4 @@
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.389 2002/06/17 15:50:45 inu Exp $
+$Id: ChangeLog,v 1.390 2002/06/17 17:51:39 ukai Exp $
